# MagaFlow

./: .gitignore  LICENSE.txt  main.py  pyproject.toml
magaflow/: sample_generator.py  scanner.py  typings.py  utils.py
magaflow/collect/: collector.py
magaflow/core/: asset.py  file.py  file_asset.py  group_strategy.py  rule.py  sample.py  types.py  utils.py
magaflow/group/: main_file.py  parent_dir.py  protocol.py  same_key.py
magaflow/pipeline/: decorator.py  executor.py  flow_task.py  stage_function.py  stage_function_config.py
magaflow/scan/: local.py  protocol.py
magaflow/scanner/: base_scanner.py  file_system_scanner.py
magaflow/strategy/: base_strategy.py  same_key.py
