[project]
name = "magaflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psutil>=7.0.0",
    "ray>=2.48.0",
    "returns>=0.26.0",
    "typing-extensions>=4.14.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.403",
]
